Fix the navigation overflow, fix microlayout in the Story section, add interactive elements instead non interactive ones in Presentation block, remove the excess <br>

--- a/source/less/block-styles/_header.less
+++ b/source/less/block-styles/_header.less
@@ -29,7 +29,7 @@
 
   @media (min-width: @breakpoint-tablet) {
     min-height: 100px;
-    flex: none;
+    // flex: none;
     border-bottom: none;
     padding: 0 75px 0 0;
   }
