--- a/source/less/block-styles/_presentation.less
+++ b/source/less/block-styles/_presentation.less
@@ -22,16 +22,26 @@
   box-sizing: border-box;
   font-size: @font-size-base;
   text-transform: uppercase;
-  width: 70px;
-  margin: 33px 0;
-  padding: 0 14px;
+  width: auto;
+  margin: 33px 14px;
+  padding: 0;
+  border: none;
+  border-bottom: 2px solid transparent;
 
+  &:hover,
+  &:focus {
+    border-bottom: 2px solid @special_light-grey-2;
+  }
+
+  &:active,
+  &:visited {
+    border-bottom: 2px solid transparent;
+  }
 
   @media (min-width: @breakpoint-tablet) {
     font-size: @font-size-big;
     line-height: 30px;
-    width: auto;
-    margin: 12px 0;
+    margin: 12px 14px;
     padding: 0;
     border-bottom: 2px dotted @special_light-grey-2;
   }
@@ -45,11 +55,11 @@
 
   @media (min-width: @breakpoint-tablet) {
     justify-content: space-between;
-    padding: 0 100px 0 55px;
+    padding: 0 85px 0 40px;
   }
 
   @media (min-width: @breakpoint-desktop) {
-    padding: 0 25px 0 85px;
+    padding: 0 10px 0 70px;
   }
 }
 
@@ -87,7 +97,20 @@
     background-color: @basic-green;
     border: 12px solid @secondary-color;
     border-radius: 50%;
-    box-shadow: 0 0 6px -2px @pimary-color;
+    filter: drop-shadow(0 1px 3px rgba(0, 0, 0, 0.16));
+
+    &:hover,
+    &:focus {
+      filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.19));
+    }
+
+    &:active {
+      width: 34px;
+      height: 34px;
+      border: 1px solid @basic-green;
+      box-shadow: inset 0 0 0 12px @secondary-color;
+      filter: drop-shadow(0 3px 5px rgba(0, 0, 0, 0.2));
+    }
   }
 }
 
