--- a/source/less/block-styles/_programs.less
+++ b/source/less/block-styles/_programs.less
@@ -17,15 +17,16 @@
   @media (min-width: @breakpoint-tablet) {
     min-height: 372px;
     margin: 0 0 30px 0;
-    padding: 75px 260px 0 55px;
 
     &--slim-program {
+      padding: 75px 270px 0 55px;
       background-image: url("../img/cat-back-t.svg");
       background-repeat: no-repeat;
       background-position: 88% center;
     }
 
     &--pro-program {
+      padding: 75px 290px 0 55px;
       background-image: url("../img/cat-back-pro-t.svg");
       background-repeat: no-repeat;
       background-position: 94% 52%;
